views/index.ejs has header, including favicon, and  Register & log in buttons

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,17 @@
-<h1>Famblr</h1>
+<!------------------------------------------------------------------------------
+  index.ejs
+------------------------------------------------------------------------------->
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Famblr</title>
+    <link rel="shortcut icon" type="image/jpg" href="Favicon.ico"/>
+</head>
+<body>
+    <h1>Famblr</h1> 
+    <button type="button">Register</button>
+    <button type="button">Log In</button>
+</body>
+
