adding login, logout and signup logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,8 @@
 </head>
 <body>
     <h1>Famblr</h1> 
-    <button type="button">Register</button>
-    <button type="button">Log In</button>
+    <button type="button"><a href="account/signup">Register</a></button>
+    <button type="button"><a href="account/login">Log In</a></button>
+    <button type="button"><a href="account/logout">Log Out</a></button>
+
 </body>
