--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,35 +3,37 @@
 ------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Famblr</title>
-    <link rel="shortcut icon" type="image/jpg" href="Favicon.ico"/>
+  <%- include ('../partials/head.ejs') %>
+    <link href="/css/login.css" rel="stylesheet">
+    </link>
 </head>
-<body>
-    <h1>Famblr</h1> 
+
+<body class="text-center">
+  <main class="form-signin">
     <form action="postLogin" method="POST">
-        <div class="container">
-          <label for="email"><b>Email</b></label>
-          <input type="text" 
-            class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
-            placeholder="Enter Email" 
-            name="email" 
-            value="<%= oldInput.email %>"
-            required
-          >
-          <br>
-          <label for="password"><b>Password</b></label>
-          <input type="password" 
-            class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
-            placeholder="Enter Password" 
-            name="password" 
-            required
-          >
-          <br>
-          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-          <button type="submit">Log in</button>
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      <h1 class="famblr-logo">Famblr</h1>
+      <h2 class="h3 mb-3 fw-normal text-muted">Please sign in</h1>
+
+        <div class="form-floating">
+          <input type="email" name="email" value="<%= oldInput.email %>"
+            class="form-control <%= validationErrors.find(e => e.param === 'email') ? 'is-invalid' : '' %>"
+            id="floatingInput" placeholder="name@example.com" required>
+          <label for="floatingInput">Email address</label>
         </div>
-      </form> 
+        <div class="form-floating">
+          <input type="password" name="password"
+            class="form-control <%= validationErrors.find(e => e.param === 'password') ? 'is-invalid' : '' %>"
+            id="floatingPassword" placeholder="Password" required>
+          <label for="floatingPassword">Password</label>
+        </div>
+
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+
+        <p class="mt-3">Dont have an account? <a href="/account/signup">Sign Up</a></p>
+        <p class="mt-5 mb-3 text-muted">© 2021</p>
+    </form>
+  </main>
 </body>
