--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,40 +3,52 @@
 ------------------------------------------------------------------------------->
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Famblr</title>
-    <link rel="shortcut icon" type="image/jpg" href="Favicon.ico"/>
+  <%- include ('../partials/head.ejs') %>
+    <link href="/css/login.css" rel="stylesheet">
+    </link>
 </head>
-<body>
-    <h1>Famblr</h1> 
+
+<body class="text-center">
+  <main class="form-signin">
     <form action="postSignup" method="POST">
-      <div class="container">
-        <label for="email"><b>Email</b></label>
-        <input type="text" 
-          value="<%= oldInput.email %>"
-          placeholder="Enter Email" 
-          name="email" 
-          required
-        >
-        <br>
-        <label for="username"><b>Username</b></label>
-        <input type="text" 
-          placeholder="Enter Username" 
-          name="username" 
-          value="<%= oldInput.username %>"
-          required
-        >
-        <br>
-        <label for="password"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="password" required>
-        <br>
-        <label for="confirmPassword"><b>Confirm Password</b></label>
-        <input type="password" placeholder="Confirm Password" name="confirmPassword" required>
-        <br>
-        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <button type="submit">Signup</button>
-      </div>
-    </form> 
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+      <h1 class="famblr-logo">Famblr</h1>
+      <h2 class="h3 mb-3 fw-normal text-muted">Sign Up</h1>
+
+        <div class="form-floating">
+          <input type="text" name="username" value="<%= oldInput.username %>"
+            class="form-control <%= validationErrors.find(e => e.param === 'username') ? 'is-invalid' : '' %>"
+            placeholder="Username" required>
+          <label for="floatingInput">Username</label>
+        </div>
+
+        <div class="form-floating">
+          <input type="email" name="email" value="<%= oldInput.email %>"
+            class="form-control <%= validationErrors.find(e => e.param === 'email') ? 'is-invalid' : '' %>"
+            placeholder="name@example.com" required>
+          <label for="floatingInput">Email address</label>
+        </div>
+
+        <div class="form-floating">
+          <input type="password" name="password"
+            class="form-control <%= validationErrors.find(e => e.param === 'password') ? 'is-invalid' : '' %>"
+            placeholder="Password" required>
+          <label for="floatingPassword">Password</label>
+        </div>
+
+        <div class="form-floating">
+          <input type="password" name="confirmPassword"
+            class="form-control <%= validationErrors.find(e => e.param === 'confirmPassword') ? 'is-invalid' : '' %>"
+            placeholder="Confirm Password" required>
+          <label for="floatingPassword">Confirm Password</label>
+        </div>
+
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+
+        <p class="mt-3">Already have an account? <a href="/account/login">Login</a></p>
+        <p class="mt-5 mb-3 text-muted">© 2021</p>
+    </form>
+  </main>
 </body>
