Added feed page

--- a/views/main/feed.ejs
+++ b/views/main/feed.ejs
@@ -2,18 +2,20 @@
 <html lang="en">
     <head>
         <%- include ('../partials/head.ejs') %>
-          <link href="/css/login.css" rel="stylesheet">
-          </link>
-      </head>
-      <body>
-    <!-- Possibly add user's first and last name here?? -->
-    <h1>Famblr Feed</h1> 
+        <link href="/css/login.css" rel="stylesheet"></link>
+    </head>
 
-    <!-- Post creation box -->
+    <%- include ('../partials/nav.ejs') %>
 
-    <ul id="feedList">
+    <body>
+        <!-- Possibly add user's first and last name here?? -->
+        <h1>Famblr Feed</h1> 
 
-    </ul>
+        <!-- Post creation box -->
 
-</body>
+        <ul id="feedList">
+
+        </ul>
+
+    </body>
 </html>
