--- a/views/main/feed.ejs
+++ b/views/main/feed.ejs
@@ -11,11 +11,15 @@
         <!-- Possibly add user's first and last name here?? -->
         <h1>Famblr Feed</h1> 
 
-        <!-- Post creation box -->
+        <div>
+            <textarea name="contentText" id="contentText" cols="30" rows="5"></textarea>
+            <button id="createPost">Create Post</button>
+        </div>
 
         <ul id="feedList">
 
         </ul>
 
     </body>
+    <script src="feed.js"></script>
 </html>
