--- a/views/main/feed.ejs
+++ b/views/main/feed.ejs
@@ -12,7 +12,7 @@
         <h1>Famblr Feed</h1> 
 
         <div>
-            <textarea name="contentText" id="contentText" cols="30" rows="5"></textarea>
+            <textarea name="contentText" id="contentText" cols="30" rows="5" placeholder="Enter post text here"></textarea>
             <button id="createPost">Create Post</button>
         </div>
 
