add css and js for socialv template

--- a/public/css/famblr.css
+++ b/public/css/famblr.css
@@ -1,7 +1,7 @@
-html, body {
+/* html, body {
     height: 100%;
     min-height: 100vh;
-}
+} */
 
 .famblr-logo {
     background: rgb(9, 0, 159);
