--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,16 +1,27 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Famblr</title>
-<link rel="shortcut icon" type="image/jpg" href="favicon.ico" />
-<!-- Latest compiled and minified CSS -->
+<link rel="shortcut icon" type="image/jpg" href="/favicon.ico" />
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+<!-- Bootstrap 4.4.1 CSS -->
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<!-- Typography CSS -->
+<link rel="stylesheet" href="/css/typography.css">
+<!-- Style CSS -->
+<link rel="stylesheet" href="/css/socialv.css">
+<!-- Responsive CSS -->
+<link rel="stylesheet" href="/css/responsive.css">
+<!-- Famblr Custom Styling -->
+<link rel="stylesheet" href="/css/famblr.css">
+
+<!-- Bootstrap 5.0.1 CSS -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
+
+<!-- Bootstrap 5.0.1 JS -->
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
     integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-    crossorigin="anonymous"></script>
-
-<link href="/css/famblr.css" rel="stylesheet"></link>
+    crossorigin="anonymous"></script> -->
