add homepage template

--- a/views/partials/js-imports.ejs
+++ b/views/partials/js-imports.ejs
@@ -38,7 +38,7 @@
 <script src="/js/libraries/smooth-scrollbar.js"></script>
 
 <!-- lottie JavaScript -->
-<!-- <script src="/js/libraries/lottie.js"></script> -->
+<script src="/js/libraries/lottie.js"></script>
 
 <!-- am core JavaScript -->
 <!-- <script src="/js/libraries/core.js"></script> -->
@@ -58,8 +58,8 @@
 <!-- am worldLow JavaScript -->
 <!-- <script src="/js/libraries/worldLow.js"></script> -->
 
-<!-- Chart Custom JavaScript -->
-<!-- <script src="/js/libraries/chart-custom.js"></script> -->
+<!-- SocialV Chart JavaScript -->
+<script src="/js/libraries/chart-socialv.js"></script>
 
 <!-- SocialV JavaScript -->
 <script src="/js/libraries/socialv.js"></script>
