refactor login routes

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -3,13 +3,13 @@
         <nav class="iq-sidebar-menu">
             <ul id="iq-sidebar-toggle" class="iq-menu">
                 <li class="active">
-                    <a href="index.html" class=" "><i class="las la-newspaper"></i><span>Newsfeed</span></a>
+                    <a href="/" class=" "><i class="las la-newspaper"></i><span>Newsfeed</span></a>
                 </li>
                 <li>
-                    <a href="profile.html" class=" "><i class="las la-user"></i><span>Profile</span></a>
+                    <a href="/account" class=" "><i class="las la-user"></i><span>Profile</span></a>
                 </li>
                 <li>
-                    <a href="group.html" class=" "><i class="las la-users"></i><span>Family Members</span></a>
+                    <a href="/family" class=" "><i class="las la-users"></i><span>Family Members</span></a>
                 </li>
             </ul>
         </nav>
