--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -20,27 +20,29 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto navbar-list">
                     <li>
-                        <a href="profile.html" class="  d-flex align-items-center">
+                        <a href="/account" class="  d-flex align-items-center">
                             <img src="https://randomuser.me/api/portraits/lego/1.jpg"
                                 class="img-fluid rounded-circle mr-3" alt="user">
                             <div class="caption">
-                                <h6 class="mb-0 line-height">Bob Frapples</h6>
+                                <h6 class="mb-0 line-height">
+                                    <%= user.username %>
+                                </h6>
                             </div>
                         </a>
                     </li>
                 </ul>
                 <ul class="navbar-list">
                     <li>
-                        <a href="#" class="search-toggle   d-flex align-items-center">
+                        <a href="#" class="search-toggle d-flex align-items-center">
                             <i class="ri-arrow-down-s-fill"></i>
                         </a>
                         <div class="iq-sub-dropdown iq-user-dropdown">
                             <div class="iq-card shadow-none m-0">
                                 <div class="iq-card-body p-0 ">
                                     <div class="bg-primary p-3 line-height">
-                                        <h5 class="mb-0 text-white line-height">Hello Bob Frapples</h5>
+                                        <h5 class="mb-0 text-white line-height">Hello <%= user.username %>s</h5>
                                     </div>
-                                    <a href="profile.html" class="iq-sub-card iq-bg-primary-hover">
+                                    <a href="/account" class="iq-sub-card iq-bg-primary-hover">
                                         <div class="media align-items-center">
                                             <div class="rounded iq-card-icon iq-bg-primary">
                                                 <i class="ri-file-user-line"></i>
@@ -51,7 +53,7 @@
                                             </div>
                                         </div>
                                     </a>
-                                    <a href="profile-edit.html" class="iq-sub-card iq-bg-warning-hover">
+                                    <a href="/account" class="iq-sub-card iq-bg-warning-hover">
                                         <div class="media align-items-center">
                                             <div class="rounded iq-card-icon iq-bg-warning">
                                                 <i class="ri-profile-line"></i>
@@ -62,31 +64,11 @@
                                             </div>
                                         </div>
                                     </a>
-                                    <!-- <a href="account-setting.html" class="iq-sub-card iq-bg-info-hover">
-                                        <div class="media align-items-center">
-                                            <div class="rounded iq-card-icon iq-bg-info">
-                                                <i class="ri-account-box-line"></i>
-                                            </div>
-                                            <div class="media-body ml-3">
-                                                <h6 class="mb-0 ">Edit Profile</h6>
-                                                <p class="mb-0 font-size-12">Modify your personal details.</p>
-                                            </div>
-                                        </div>
-                                    </a> -->
-                                    <!-- <a href="privacy-setting.html" class="iq-sub-card iq-bg-danger-hover">
-                                        <div class="media align-items-center">
-                                            <div class="rounded iq-card-icon iq-bg-danger">
-                                                <i class="ri-lock-line"></i>
-                                            </div>
-                                            <div class="media-body ml-3">
-                                                <h6 class="mb-0 ">Privacy Settings</h6>
-                                                <p class="mb-0 font-size-12">Control your privacy parameters.</p>
-                                            </div>
-                                        </div>
-                                    </a> -->
                                     <div class="d-inline-block w-100 text-center p-3">
-                                        <a class="bg-primary iq-sign-btn" href="sign-in.html" role="button">Sign out<i
-                                                class="ri-login-box-line ml-2"></i></a>
+                                        <form action="/logout" method="POST">
+                                            <button type="submit" class="bg-primary iq-sign-btn" role="button">Sign
+                                                out<i class="ri-login-box-line ml-2"></i></a>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
