--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -12,12 +12,10 @@
 
 <body xclass="text-center">
   <main class="form-signin">
-    <form action="postLogin" method="POST">
+    <form action="login" method="POST">
       <!-- Add csrf token here if needed -->
       <h1> <span class="famblr-logo">Famblr</span></h1>
       <h2 class="h3 mb-3 fw-normal text-muted">Please Sign In</h1>
-
-
 
         <div class="row mb-2">
           <div class="col">
@@ -41,7 +39,7 @@
 
         <button class="mt-3 w-100 btn btn-lg btn-primary mt-3" type="submit">Login</button>
 
-        <p class="mt-3">Dont have an account? <a href="/account/signup">Sign Up</a></p>
+        <p class="mt-3">Dont have an account? <a href="/signup">Sign Up</a></p>
         <p class="mt-5 mb-3 text-muted">© 2021</p>
     </form>
   </main>
