--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -12,7 +12,7 @@
 
 <body>
   <main class="form-signin">
-    <form action="postSignup" method="POST">
+    <form action="signup" method="POST">
       <!-- Add csrf token here if needed -->
       <h1> <span class="famblr-logo">Famblr</span></h1>
       <h2 class="h3 mb-3 fw-normal text-muted">Sign Up</h1>
@@ -90,7 +90,7 @@
 
         <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Sign Up</button>
 
-        <p class="mt-3">Already have an account? <a href="/account/login">Login</a></p>
+        <p class="mt-3">Already have an account? <a href="/login">Login</a></p>
         <p class="mt-5 mb-3 text-muted">© 2021</p>
     </form>
   </main>
