--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -20,11 +20,11 @@
         <div class="row mb-2">
           <div class="col">
             <label for="firstName">First Name</label>
-            <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name" required>
+            <input type="text" name="firstName" id="firstName" class="form-control" placeholder="First name" value="<%= oldInput.firstName %>" required>
           </div>
           <div class="col">
             <label for="lastName">Last Name</label>
-            <input type="text" name="lastName" id="lastName" class="form-control" placeholder="Last name" required>
+            <input type="text" name="lastName" id="lastName" class="form-control" placeholder="Last name" value="<%= oldInput.lastName %>" required>
           </div>
         </div>
 
