--- a/views/partials/top-navbar.ejs
+++ b/views/partials/top-navbar.ejs
@@ -25,7 +25,7 @@
                                 class="img-fluid rounded-circle mr-3" alt="user">
                             <div class="caption">
                                 <h6 class="mb-0 line-height">
-                                    <%= user.username %>
+                                    <%= user.firstName %> <%= user.lastName %> 
                                 </h6>
                             </div>
                         </a>
@@ -40,7 +40,7 @@
                             <div class="iq-card shadow-none m-0">
                                 <div class="iq-card-body p-0 ">
                                     <div class="bg-primary p-3 line-height">
-                                        <h5 class="mb-0 text-white line-height">Hello <%= user.username %>s</h5>
+                                        <h5 class="mb-0 text-white line-height">Hello <%= user.firstName %> <%= user.lastName %> </h5>
                                     </div>
                                     <a href="/account" class="iq-sub-card iq-bg-primary-hover">
                                         <div class="media align-items-center">
