--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,123 +11,91 @@
 <body>
   <!-- <h1><span class="famblr-logo">Famblr</span></h1> -->
   <%- include ('partials/sidebar.ejs') %>
-    <%- include ('partials/top-navbar.ejs') %>
-      <%- include ('partials/right-sidebar.ejs') %>
+  <%- include ('partials/top-navbar.ejs') %>
+  <%- include ('partials/right-sidebar.ejs') %>
 
-        <div id="content-page" class="content-page">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 row m-0 p-0">
+  <div id="content-page" class="content-page">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 row m-0 p-0">
 
-                <div class="col-sm-12">
-                  <div id="post-modal-data" class="iq-card iq-card-block iq-card-stretch iq-card-height">
-                    <div class="iq-card-header d-flex justify-content-between">
-                      <div class="iq-header-title">
-                        <h4 class="card-title">Create Post</h4>
+          <!-- Import the create post form -->
+          <%- include ('partials/create-post.ejs') %>
+
+            <!-- Here is an example post -->
+            <div class="col-sm-12">
+              <div class="iq-card iq-card-block iq-card-stretch iq-card-height">
+                <div class="iq-card-body">
+                  <div class="user-post-data">
+                    <div class="d-flex flex-wrap">
+                      <div class="media-support-user-img mr-3">
+                        <img class="rounded-circle img-fluid" src="https://randomuser.me/api/portraits/lego/3.jpg"
+                          alt="">
                       </div>
-                    </div>
-                    <div class="iq-card-body">
-                      <form action="#">
-                        <div class="d-flex align-items-center">
-                          <div class="user-img">
-                            <img src="https://randomuser.me/api/portraits/lego/1.jpg" alt="userimg"
-                              class="avatar-60 rounded-circle">
-                          </div>
-                          <div class="post-text ml-3 w-100">
-                            <textarea type="text" class="form-control rounded" placeholder="Write something here..."
-                              rows="2" style="border:none; line-height: 1.25; min-height: 3em;" name="postBody"
-                              required></textarea>
-                          </div>
-                        </div>
-                        <hr>
-                        <ul
-                          class="post-opt-block d-flex align-items-center list-inline justify-content-between m-0 p-0">
-                          <a href="#">
-                            <li class="iq-bg-primary rounded p-2 pointer mr-3">
-                              <img src="images/small/07.png" alt="icon" class="img-fluid">&nbsp;Add Photo
-                            </li>
-                          </a>
-                          <li>
-                            <button type="submit" class="btn btn-primary d-block">Post</button>
-                          </li>
-                        </ul>
-                      </form>
+                      <div class="media-support-info mt-2">
+                        <h5 class="mb-0 d-inline-block"><a href="#" class="">Barb Ackue</a></h5>
+                        <p class="mb-0 text-primary">1 hour ago</p>
+                      </div>
+
                     </div>
                   </div>
-                </div>
-
-                <!-- Here is an example post -->
-                <div class="col-sm-12">
-                  <div class="iq-card iq-card-block iq-card-stretch iq-card-height">
-                    <div class="iq-card-body">
-                      <div class="user-post-data">
+                  <div class="mt-3">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nulla dolor, ornare at
+                      commodo
+                      non, feugiat non nisi. Phasellus faucibus mollis pharetra. Proin blandit ac massa sed
+                      rhoncus
+                    </p>
+                  </div>
+                  <div class="user-post">
+                    <a href="javascript:void();"><img src="https://picsum.photos/621/400" alt="post-image"
+                        class="img-fluid rounded w-100"></a>
+                  </div>
+                  <div class="comment-area mt-3">
+                    <hr>
+                    <ul class="post-comments p-0 m-0">
+                      <li class="mb-2">
                         <div class="d-flex flex-wrap">
-                          <div class="media-support-user-img mr-3">
-                            <img class="rounded-circle img-fluid" src="https://randomuser.me/api/portraits/lego/3.jpg"
-                              alt="">
+                          <div class="user-img">
+                            <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="userimg"
+                              class="avatar-35 rounded-circle img-fluid">
                           </div>
-                          <div class="media-support-info mt-2">
-                            <h5 class="mb-0 d-inline-block"><a href="#" class="">Barb Ackue</a></h5>
-                            <p class="mb-0 text-primary">1 hour ago</p>
+                          <div class="comment-data-block ml-3">
+                            <h6>Monty Carlo</h6>
+                            <p class="mb-0">Lorem ipsum dolor sit amet</p>
                           </div>
-
                         </div>
-                      </div>
-                      <div class="mt-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nulla dolor, ornare at commodo
-                          non, feugiat non nisi. Phasellus faucibus mollis pharetra. Proin blandit ac massa sed rhoncus
-                        </p>
-                      </div>
-                      <div class="user-post">
-                        <a href="javascript:void();"><img src="https://picsum.photos/621/400" alt="post-image"
-                            class="img-fluid rounded w-100"></a>
-                      </div>
-                      <div class="comment-area mt-3">
-                        <hr>
-                        <ul class="post-comments p-0 m-0">
-                          <li class="mb-2">
-                            <div class="d-flex flex-wrap">
-                              <div class="user-img">
-                                <img src="https://randomuser.me/api/portraits/lego/5.jpg" alt="userimg"
-                                  class="avatar-35 rounded-circle img-fluid">
-                              </div>
-                              <div class="comment-data-block ml-3">
-                                <h6>Monty Carlo</h6>
-                                <p class="mb-0">Lorem ipsum dolor sit amet</p>
-                              </div>
-                            </div>
-                          </li>
-                          <li>
-                            <div class="d-flex flex-wrap">
-                              <div class="user-img">
-                                <img src="https://randomuser.me/api/portraits/lego/3.jpg" alt="userimg"
-                                  class="avatar-35 rounded-circle img-fluid">
-                              </div>
-                              <div class="comment-data-block ml-3">
-                                <h6>Paul Molive</h6>
-                                <p class="mb-0">Lorem ipsum dolor sit amet</p>
-                              </div>
-                            </div>
-                          </li>
-                        </ul>
-                        <form class="comment-text d-flex align-items-center mt-3" action="javascript:void(0);">
-                          <input type="text" class="form-control rounded" placeholder="Reply...">
-                          <div class="comment-attagement d-flex">
-                            <button type="submit" class="btn btn-light d-block mr-1">Reply</button>
+                      </li>
+                      <li>
+                        <div class="d-flex flex-wrap">
+                          <div class="user-img">
+                            <img src="https://randomuser.me/api/portraits/lego/3.jpg" alt="userimg"
+                              class="avatar-35 rounded-circle img-fluid">
                           </div>
-                        </form>
+                          <div class="comment-data-block ml-3">
+                            <h6>Paul Molive</h6>
+                            <p class="mb-0">Lorem ipsum dolor sit amet</p>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                    <form class="comment-text d-flex align-items-center mt-3" action="javascript:void(0);">
+                      <input type="text" class="form-control rounded" placeholder="Reply...">
+                      <div class="comment-attagement d-flex">
+                        <button type="submit" class="btn btn-light d-block mr-1">Reply</button>
                       </div>
-                    </div>
+                    </form>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
         </div>
+      </div>
+    </div>
+  </div>
 
-
-        <%- include ('partials/footer.ejs') %>
-          <%- include ('partials/js-imports.ejs') %>
+  <%- include ('partials/footer.ejs') %>
+  <%- include ('partials/js-imports.ejs') %>
+  
 </body>
 
 </html>
