--- a/views/partials/create-post.ejs
+++ b/views/partials/create-post.ejs
@@ -36,7 +36,7 @@
 
 <script>
     document.getElementById("createPost").addEventListener('click', () => {
-        fetch('/feed/post', {
+        fetch('/api/posts', {
             method: 'POST',
             body: JSON.stringify({
                 contentText: document.getElementById('contentText').value
