--- a/views/partials/right-sidebar.ejs
+++ b/views/partials/right-sidebar.ejs
@@ -1,4 +1,4 @@
-<div class="right-sidebar-mini right-sidebar">
+<!-- <div class="right-sidebar-mini right-sidebar">
     <div class="right-sidebar-panel p-0">
         <div class="iq-card shadow-none">
             <div class="iq-card-body p-0">
@@ -15,4 +15,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
