fix multi-line bug on edit-post view

--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -67,7 +67,7 @@
                             const loginApp = new Vue({
                                 el: '.container',
                                 data: {
-                                    postText: "<%= post.text %>",
+                                    postText: `<%= post.text %>`,
                                 },
                                 computed: {
                                     postId: function () {
